--- a/categories.html
+++ b/categories.html
@@ -45,10 +45,17 @@
     <div class="container">
       <ol class="breadcrumb">
         <li><a href=""><div class="fa fa-lg fa-home"></div><span class="hidden-xs"> Home</span></a></li>
-        <li class="active"><div class="fa fa-lg fa-folder-open"></div> Categories <span class="badge">0</span></li>        
+        <li class="active"><div class="fa fa-lg fa-folder-open"></div> Categories <span class="badge">1</span></li>        
       </ol>
 
-      <ul class="list-inline">      </ul>
+      <ul class="list-inline">        <li>
+          <button type="button" class="btn btn-default">
+            <a href="/category/python.html">
+              <div class="fa fa-lg fa-folder"></div> Python <span class="badge">1</span>
+            </a>
+          </button>
+        </li>
+      </ul>
     </div>
     <footer class="footer">
       <div class="container">
