--- a/tags.html
+++ b/tags.html
@@ -45,10 +45,24 @@
     <div class="container">
       <ol class="breadcrumb">
         <li><a href=""><div class="fa fa-lg fa-home"></div><span class="hidden-xs"> Home</span></a></li>
-        <li class="active"><div class="fa fa-lg fa-tags"></div> Tags <span class="badge">0</span></li>
+        <li class="active"><div class="fa fa-lg fa-tags"></div> Tags <span class="badge">2</span></li>
       </ol>
 
-      <ul class="list-inline">      </ul>
+      <ul class="list-inline">        <li>
+          <button type="button" class="btn btn-default">
+            <a href="/tag/markdown.html">
+              <div class="fa fa-lg fa-tag"></div> markdown <span class="badge">1</span>
+            </a>
+          </button>
+        </li>
+        <li>
+          <button type="button" class="btn btn-default">
+            <a href="/tag/pelican.html">
+              <div class="fa fa-lg fa-tag"></div> pelican <span class="badge">1</span>
+            </a>
+          </button>
+        </li>
+      </ul>
     </div>
     <footer class="footer">
       <div class="container">
