--- a/test.html
+++ b/test.html
@@ -30,18 +30,23 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <meta name="author" content="Natan Oliveira" />
-    <meta name="description" content="" />
+<meta name="author" content="Natan Oliveira" />
+<meta name="description" content="Some bugs are now fixed. I think the most important fixes are: Bug in CSS with placement of "Newer Posts" button Posts preview on main page Hope you enjoy this theme." />
+<meta name="keywords" content="test">
 <meta property="og:site_name" content="NatanOCR - Natan Oliveira Blog"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="NatanOCR - Natan Oliveira Blog"/>
-<meta property="og:description" content=""/>
+<meta property="og:title" content="post test"/>
+<meta property="og:description" content="Some bugs are now fixed. I think the most important fixes are: Bug in CSS with placement of "Newer Posts" button Posts preview on main page Hope you enjoy this theme."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://natanocr.github.io"/>
+<meta property="og:url" content="https://natanocr.github.io/test.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2017-04-11 00:00:00-03:00"/>
+<meta property="article:modified_time" content=""/>
+<meta property="article:author" content="https://natanocr.github.io/author/natan-oliveira.html">
+<meta property="article:section" content="test"/>
+<meta property="article:tag" content="test"/>
 <meta property="og:image" content="//s.gravatar.com/avatar/8aaa554ca377fbcdb5f22bf0260821df?s=80">
 
-  <title>NatanOCR - Natan Oliveira Blog &ndash;     Tag pelican
-</title>
+  <title>NatanOCR - Natan Oliveira Blog &ndash; post test</title>
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
@@ -60,12 +65,17 @@
       <h1><a href="https://natanocr.github.io">Natan Oliveira</a></h1>
 
 <p>Analista de Sistemas</p>
+      <nav>
+        <ul class="list">
+
+          <li><a href="https://natanocr.github.io/feeds/all.atom.xml" target="_blank">rss</a></li>
+        </ul>
+      </nav>
 
       <ul class="social">
         <li><a class="sc-linkedin" href="https://br.linkedin.com/in/natanocr/en" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="https://github.com/natanocr" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-twitter" href="https://twitter.com/natanocr" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="sc-rss" href="//blog.alexandrevicenzi.com/feeds/all.atom.xml" target="_blank"><i class="fa fa-rss"></i></a></li>
       </ul>
     </div>
 
@@ -93,38 +103,61 @@
 
     </nav>
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="https://natanocr.github.io/primeiro-artigo.html#primeiro-artigo">Hello Pelican!</a></h2>
+    <h1 id="test">post test</h1>
     <p>
-          Posted on Seg 10 abril 2017 in <a href="https://natanocr.github.io/category/python.html">Python</a>
-
+          Posted on Tue 11 April 2017 in <a href="https://natanocr.github.io/category/test.html">test</a>
 
 
     </p>
   </header>
+
+
   <div>
-      <p>Um resumo sobre o post do Pelican</p>
-      <br>
-      <a class="btn" href="https://natanocr.github.io/primeiro-artigo.html#primeiro-artigo">    Continue reading
-</a>
+    <p>Some bugs are now fixed. I think the most important fixes are:</p>
+<ul>
+<li><a href="https://github.com/alexandrevicenzi/Flex/issues/21">Bug in CSS with placement of "Newer Posts" button</a></li>
+<li><a href="https://github.com/alexandrevicenzi/Flex/issues/14">Posts preview on main page</a></li>
+</ul>
+<p>Hope you enjoy this theme.</p>
   </div>
+  <div class="tag-cloud">
+    <p>
+      <a href="https://natanocr.github.io/tag/test.html">test</a>
+    </p>
+  </div>
+
+  <div class="center social-share">
+    <p>    Like this article? Share it with your friends!
+</p>
+    <div class="addthis_native_toolbox"></div>
+    <div class="addthis_sharing_toolbox"></div>
+  </div>
+
+
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <ins class="adsbygoogle ads-responsive"
+         data-ad-client="ca-pub-8638263036572863"
+         data-ad-slot="7257980762"></ins>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'natanocr';
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>
+        Please enable JavaScript to view comments.
+
+</noscript>
 </article>
-
-  <div class="pagination">
-  </div>
-
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <ins class="adsbygoogle ads-responsive"
-       data-ad-client="ca-pub-8638263036572863"
-       data-ad-slot="9584371569"></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-
-
 
     <footer>
 <p>&copy; Natan Oliveira </p>
