--- a/index.html
+++ b/index.html
@@ -59,12 +59,17 @@
       <h1><a href="https://natanocr.github.io">Natan Oliveira</a></h1>
 
 <p>Analista de Sistemas</p>
+      <nav>
+        <ul class="list">
+
+          <li><a href="https://natanocr.github.io/feeds/all.atom.xml" target="_blank">rss</a></li>
+        </ul>
+      </nav>
 
       <ul class="social">
         <li><a class="sc-linkedin" href="https://br.linkedin.com/in/natanocr/en" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="https://github.com/natanocr" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-twitter" href="https://twitter.com/natanocr" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="sc-rss" href="//blog.alexandrevicenzi.com/feeds/all.atom.xml" target="_blank"><i class="fa fa-rss"></i></a></li>
       </ul>
     </div>
 
@@ -96,18 +101,23 @@
 
 <article>
   <header>
-    <h2><a href="https://natanocr.github.io/primeiro-artigo.html#primeiro-artigo">Hello Pelican!</a></h2>
+    <h2><a href="https://natanocr.github.io/test.html#test">post test</a></h2>
     <p>
-          Posted on Seg 10 abril 2017 in <a href="https://natanocr.github.io/category/python.html">Python</a>
+          Posted on Tue 11 April 2017 in <a href="https://natanocr.github.io/category/test.html">test</a>
 
 
 
     </p>
   </header>
   <div>
-      <p>Um resumo sobre o post do Pelican</p>
+      <p>Some bugs are now fixed. I think the most important fixes are:</p>
+<ul>
+<li><a href="https://github.com/alexandrevicenzi/Flex/issues/21">Bug in CSS with placement of "Newer Posts" button</a></li>
+<li><a href="https://github.com/alexandrevicenzi/Flex/issues/14">Posts preview on main page</a></li>
+</ul>
+<p>Hope you enjoy this theme.</p>
       <br>
-      <a class="btn" href="https://natanocr.github.io/primeiro-artigo.html#primeiro-artigo">    Continue reading
+      <a class="btn" href="https://natanocr.github.io/test.html#test">    Continue reading
 </a>
   </div>
 </article>
