--- a/tags.html
+++ b/tags.html
@@ -60,12 +60,17 @@
       <h1><a href="https://natanocr.github.io">Natan Oliveira</a></h1>
 
 <p>Analista de Sistemas</p>
+      <nav>
+        <ul class="list">
+
+          <li><a href="https://natanocr.github.io/feeds/all.atom.xml" target="_blank">rss</a></li>
+        </ul>
+      </nav>
 
       <ul class="social">
         <li><a class="sc-linkedin" href="https://br.linkedin.com/in/natanocr/en" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="https://github.com/natanocr" target="_blank"><i class="fa fa-github"></i></a></li>
         <li><a class="sc-twitter" href="https://twitter.com/natanocr" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="sc-rss" href="//blog.alexandrevicenzi.com/feeds/all.atom.xml" target="_blank"><i class="fa fa-rss"></i></a></li>
       </ul>
     </div>
 
@@ -99,8 +104,7 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://natanocr.github.io/tag/markdown.html">markdown</a> (1)</li>
-          <li><a href="https://natanocr.github.io/tag/pelican.html">pelican</a> (1)</li>
+    <ul class="list">          <li><a href="https://natanocr.github.io/tag/test.html">test</a> (1)</li>
     </ul>
   </div>
 </article>
