--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,8 +40,7 @@
 <meta property="og:url" content="https://natanocr.github.io"/>
 <meta property="og:image" content="//s.gravatar.com/avatar/8aaa554ca377fbcdb5f22bf0260821df?s=80">
 
-  <title>NatanOCR - Natan Oliveira Blog &ndash;     Posts by Natan Oliveira
-:</title>
+  <title>NatanOCR - Natan Oliveira Blog &ndash; Contact</title>
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
@@ -102,43 +101,15 @@
 
     </nav>
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="https://natanocr.github.io/test.html#test">post test</a></h2>
-    <p>
-          Posted on Tue 11 April 2017 in <a href="https://natanocr.github.io/category/test.html">test</a>
-
-
-
-    </p>
+    <h1 id="contact">Contact</h1>
   </header>
   <div>
-      <p>Some bugs are now fixed. I think the most important fixes are:</p>
-<ul>
-<li><a href="https://github.com/alexandrevicenzi/Flex/issues/21">Bug in CSS with placement of "Newer Posts" button</a></li>
-<li><a href="https://github.com/alexandrevicenzi/Flex/issues/14">Posts preview on main page</a></li>
-</ul>
-<p>Hope you enjoy this theme.</p>
-      <br>
-      <a class="btn" href="https://natanocr.github.io/test.html#test">    Continue reading
-</a>
+    <p>If you're interested in my work or you just have a question or comment, please feel free to contact me anytime.</p>
+<p>You can send me an email to natanoliveiracruz@gmail.com</p>
   </div>
 </article>
-
-  <div class="pagination">
-  </div>
-
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <ins class="adsbygoogle ads-responsive"
-       data-ad-client="ca-pub-8638263036572863"
-       data-ad-slot="9584371569"></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-
-
 
     <footer>
 <p>&copy; Natan Oliveira </p>
