Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
           <li><a href="https://natanocr.github.io/pages/about.html#about">About</a></li>
           <li><a href="https://natanocr.github.io/pages/contact.html#contact">Contact</a></li>
 
-          <li><a href="https://natanocr.github.io/pages/about.html" target="_blank">about</a></li>
-          <li><a href="https://natanocr.github.io/pages/contact.html" target="_blank">contact</a></li>
         </ul>
       </nav>
 
@@ -114,12 +112,7 @@
     </p>
   </header>
   <div>
-      <p>Some bugs are now fixed. I think the most important fixes are:</p>
-<ul>
-<li><a href="https://github.com/alexandrevicenzi/Flex/issues/21">Bug in CSS with placement of "Newer Posts" button</a></li>
-<li><a href="https://github.com/alexandrevicenzi/Flex/issues/14">Posts preview on main page</a></li>
-</ul>
-<p>Hope you enjoy this theme.</p>
+      <p>apenas um test</p>
       <br>
       <a class="btn" href="https://natanocr.github.io/test.html#test">    Continue reading
 </a>
