--- a/test.html
+++ b/test.html
@@ -31,11 +31,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <meta name="author" content="Natan Oliveira" />
-<meta name="description" content="Some bugs are now fixed. I think the most important fixes are: Bug in CSS with placement of "Newer Posts" button Posts preview on main page Hope you enjoy this theme." />
+<meta name="description" content="apenas um test" />
 <meta name="keywords" content="test">
 <meta property="og:site_name" content="NatanOCR - Natan Oliveira Blog"/>
 <meta property="og:title" content="post test"/>
-<meta property="og:description" content="Some bugs are now fixed. I think the most important fixes are: Bug in CSS with placement of "Newer Posts" button Posts preview on main page Hope you enjoy this theme."/>
+<meta property="og:description" content="apenas um test"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://natanocr.github.io/test.html"/>
 <meta property="og:type" content="article"/>
@@ -70,8 +70,6 @@
           <li><a href="https://natanocr.github.io/pages/about.html#about">About</a></li>
           <li><a href="https://natanocr.github.io/pages/contact.html#contact">Contact</a></li>
 
-          <li><a href="https://natanocr.github.io/pages/about.html" target="_blank">about</a></li>
-          <li><a href="https://natanocr.github.io/pages/contact.html" target="_blank">contact</a></li>
         </ul>
       </nav>
 
@@ -119,12 +117,7 @@
 
 
   <div>
-    <p>Some bugs are now fixed. I think the most important fixes are:</p>
-<ul>
-<li><a href="https://github.com/alexandrevicenzi/Flex/issues/21">Bug in CSS with placement of "Newer Posts" button</a></li>
-<li><a href="https://github.com/alexandrevicenzi/Flex/issues/14">Posts preview on main page</a></li>
-</ul>
-<p>Hope you enjoy this theme.</p>
+    <p>apenas um test</p>
   </div>
   <div class="tag-cloud">
     <p>
