Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://natanocr.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://natanocr.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="NatanOCR - Natan Oliveira Blog Atom">
+    <link href="https://natanocr.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="NatanOCR - Natan Oliveira's Blog Atom">
 
 
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -32,15 +32,15 @@
 
     <meta name="author" content="Natan Oliveira" />
     <meta name="description" content="" />
-<meta property="og:site_name" content="NatanOCR - Natan Oliveira Blog"/>
+<meta property="og:site_name" content="NatanOCR - Natan Oliveira's Blog"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="NatanOCR - Natan Oliveira Blog"/>
+<meta property="og:title" content="NatanOCR - Natan Oliveira's Blog"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://natanocr.github.io"/>
 <meta property="og:image" content="//s.gravatar.com/avatar/8aaa554ca377fbcdb5f22bf0260821df?s=80">
 
-  <title>NatanOCR - Natan Oliveira Blog &ndash;     Tags
+  <title>NatanOCR - Natan Oliveira's Blog &ndash;     Tags
 </title>
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -59,7 +59,7 @@
       </a>
       <h1><a href="https://natanocr.github.io">Natan Oliveira</a></h1>
 
-<p>Analista de Sistemas</p>
+<p>Systems Analyst</p>
       <nav>
         <ul class="list">
           <li><a href="https://natanocr.github.io/pages/about.html#about">About</a></li>
@@ -106,7 +106,9 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://natanocr.github.io/tag/test.html">test</a> (1)</li>
+    <ul class="list">          <li><a href="https://natanocr.github.io/tag/operadora.html">operadora</a> (1)</li>
+          <li><a href="https://natanocr.github.io/tag/python.html">python</a> (1)</li>
+          <li><a href="https://natanocr.github.io/tag/tutorial.html">tutorial</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -136,7 +138,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " NatanOCR - Natan Oliveira Blog ",
+  "name": " NatanOCR - Natan Oliveira's Blog ",
   "url" : "https://natanocr.github.io",
   "image": "//s.gravatar.com/avatar/8aaa554ca377fbcdb5f22bf0260821df?s=80",
   "description": ""
